@@ -25,6 +25,7 @@ import org.openrewrite.marker.Range;
 import org.openrewrite.tree.ParseError;
 import software.coley.recaf.analytics.logging.DebuggingLogger;
 import software.coley.recaf.analytics.logging.Logging;
+import software.coley.recaf.behavior.Closing;
 import software.coley.recaf.info.AndroidClassInfo;
 import software.coley.recaf.info.ClassInfo;
 import software.coley.recaf.info.JvmClassInfo;
@@ -67,7 +68,7 @@ import java.util.concurrent.Future;
  * @see AssemblerContextActionSupport Alternative for context actions on assembly sources.
  */
 @Dependent
-public class JavaContextActionSupport implements EditorComponent, UpdatableNavigable {
+public class JavaContextActionSupport implements EditorComponent, UpdatableNavigable, Closing {
 	private static final DebuggingLogger logger = Logging.get(JavaContextActionSupport.class);
 	private static final long REPARSE_ELAPSED_TIME = 2_000L;
 	private final ExecutorService parseThreadPool = ThreadPoolFactory.newSingleThreadExecutor("java-parse");
@@ -330,10 +331,10 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 				logger.warn("Could not create Java AST model from source of: {} after {}ms", classNameEsc, diff);
 				astAvailabilityButton.setUnavailable();
 			} else {
-				SourceFile result = results.get(0);
+				SourceFile result = results.getFirst();
 				if (result instanceof ParseError parseError) {
 					unit = null;
-					ParseExceptionResult errResult = (ParseExceptionResult) parseError.getMarkers().getMarkers().get(0);
+					ParseExceptionResult errResult = (ParseExceptionResult) parseError.getMarkers().getMarkers().getFirst();
 					logger.warn("Parse error from source of: {} after {}ms, err={}",
 							classNameEsc, diff, errResult.getMessage());
 					astAvailabilityButton.setParserError(errResult);
@@ -452,7 +453,13 @@ public class JavaContextActionSupport implements EditorComponent, UpdatableNavig
 
 	@Override
 	public void disable() {
-		// no-op
+		close();
+	}
+
+	@Override
+	public void close() {
+		if (!parseThreadPool.isShutdown())
+			parseThreadPool.shutdownNow();
 	}
 
 	@Override
